fix headline on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 .title,
 .headline {
   font-family: "ChunkFive";
-  font-size: 40px;
+  font-size: 34px;
   font-weight: normal;
 }
 
